Closed Bug 1295899 Opened 9 years ago Closed 9 years ago

Only use build id for Intel blocklist entry 'FEATURE_FAILURE_BUG_1018278'

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox51 --- fixed

People

(Reporter: ethlin, Assigned: cleu)

References

(Blocks 1 open bug)

Details

(Whiteboard: [gfx-noted])

Attachments

(3 files, 7 obsolete files)

733.95 KB, image/png
Details
1.82 KB, patch
milan
: review+
Details | Diff | Splinter Review
928 bytes, patch
cleu
: review+
Details | Diff | Splinter Review
In bug 1018278, we add this entry[1] to blocklist: APPEND_TO_DRIVER_BLOCKLIST(OperatingSystem::Windows, (nsAString&) GfxDriverInfo::GetDeviceVendor(VendorIntel), (GfxDeviceFamily*) GfxDriverInfo::GetDeviceFamily(IntelHD3000), GfxDriverInfo::allFeatures, nsIGfxInfo::FEATURE_BLOCKED_DRIVER_VERSION, DRIVER_LESS_THAN_OR_EQUAL, V(8,15,10,2321), "FEATURE_FAILURE_BUG_1018278", "8.15.10.2342"); Per discussion in bug 1294771, we should investigate what we are trying to block and see if we should use build id for this. [1] https://hg.mozilla.org/mozilla-central/annotate/054d4856cea6150a6638e5daf7913713281af97d/widget/windows/GfxInfo.cpp#l1057
Whiteboard: [gfx-noted]
Assignee: nobody → cleu
I will test it on a PC based on an intel i3-2125 with Intel HD3000 iGP
Attached image snapshot.png
Attachment #8783393 - Attachment description: WIP - Change DRIVER_LESS_THAN_OR_EQUAL to DRIVER_BUILD_ID_LESS_THAN → Change DRIVER_LESS_THAN_OR_EQUAL to DRIVER_BUILD_ID_LESS_THAN
Comment on attachment 8783393 [details] [diff] [review] Change DRIVER_LESS_THAN_OR_EQUAL to DRIVER_BUILD_ID_LESS_THAN Review of attachment 8783393 [details] [diff] [review]: ----------------------------------------------------------------- I've tested it under an Intel i3-2125 with HD3000 with driver build id 2321. It seems that gecko can still block it from executing D2D with our blacklist changed.
Attachment #8783393 - Flags: review?(ethlin)
Comment on attachment 8783393 [details] [diff] [review] Change DRIVER_LESS_THAN_OR_EQUAL to DRIVER_BUILD_ID_LESS_THAN Review of attachment 8783393 [details] [diff] [review]: ----------------------------------------------------------------- ::: widget/windows/GfxInfo.cpp @@ +1067,4 @@ > APPEND_TO_DRIVER_BLOCKLIST(OperatingSystem::Windows, > (nsAString&) GfxDriverInfo::GetDeviceVendor(VendorIntel), (GfxDeviceFamily*) GfxDriverInfo::GetDeviceFamily(IntelHD3000), > GfxDriverInfo::allFeatures, nsIGfxInfo::FEATURE_BLOCKED_DRIVER_VERSION, > + DRIVER_BUILD_ID_LESS_THAN, 2322, "FEATURE_FAILURE_BUG_1018278", "Intel Driver build number < 2322"); I think you should add DRIVER_BUILD_ID_LESS_THAN_OR_EQUAL and implement it. The last parameter is suggested version, so maybe we should suggest 2342.
Attachment #8783393 - Flags: review?(ethlin)
Attachment #8785184 - Flags: review?(ethlin)
Attachment #8785186 - Flags: review?(ethlin)
Change recommended driver version to recommended build id.
Attachment #8785186 - Attachment is obsolete: true
Attachment #8785186 - Flags: review?(ethlin)
Attachment #8785776 - Flags: review?(ethlin)
Attachment #8785184 - Flags: review?(ethlin) → review+
Attachment #8785776 - Flags: review?(ethlin) → review+
Attachment #8785184 - Flags: review?(jmuizelaar)
Attachment #8785776 - Flags: review?(jmuizelaar)
Attachment #8785184 - Flags: review?(jmuizelaar)
Attachment #8785776 - Flags: review?(jmuizelaar)
Attachment #8785184 - Flags: review?(milan)
Attachment #8785776 - Flags: review?(milan)
Blocks: 1295902
Comment on attachment 8785184 [details] [diff] [review] Implement DRIVER_BUILD_ID_LESS_THAN_OR_EQUAL Review of attachment 8785184 [details] [diff] [review]: ----------------------------------------------------------------- We need to add support in BlacklistComparatorToComparisonOp for this new operator, as well as for the previously added but missed DRIVER_BUILD_ID_LESS_THAN. Otherwise, looks good.
Attachment #8785184 - Flags: review?(milan) → review-
Comment on attachment 8785776 [details] [diff] [review] Change DRIVER_LESS_THAN_OR_EQUAL to DRIVER_BUILD_ID_LESS_THAN_OR_EQUAL Review of attachment 8785776 [details] [diff] [review]: ----------------------------------------------------------------- ::: widget/windows/GfxInfo.cpp @@ +1067,4 @@ > APPEND_TO_DRIVER_BLOCKLIST(OperatingSystem::Windows, > (nsAString&) GfxDriverInfo::GetDeviceVendor(VendorIntel), (GfxDeviceFamily*) GfxDriverInfo::GetDeviceFamily(IntelHD3000), > GfxDriverInfo::allFeatures, nsIGfxInfo::FEATURE_BLOCKED_DRIVER_VERSION, > + DRIVER_BUILD_ID_LESS_THAN_OR_EQUAL, 2321, "FEATURE_FAILURE_BUG_1018278", "2342"); It is probably more instructive to display the recommended version as "X.X.X.2342" instead of just 2342, to help people that do not understand Intel's driver versioning scheme.
Attachment #8785776 - Flags: review?(milan) → review+
Add BUILD_ID_LESS_THAN and BUILD_ID_LESS_THAN_OR_EQUAL in BlacklistComparatorToComparisonsOp
Attachment #8785184 - Attachment is obsolete: true
Revert recommended build id back to recommended driver version
Attachment #8785776 - Attachment is obsolete: true
Attachment #8787038 - Flags: review?(milan)
Change recommended version number to X.X.X.(build id)
Attachment #8787046 - Attachment is obsolete: true
Attachment #8787047 - Flags: review+
Blocks: 1299757
Attachment #8787038 - Flags: review?(milan) → review+
Attachment #8787038 - Attachment description: Implement DRIVER_BUILD_ID_LESS_THAN_OR_EQUAL r=ethlin → part1: Implement DRIVER_BUILD_ID_LESS_THAN_OR_EQUAL r=ethlin
Attachment #8787047 - Attachment description: Change DRIVER_LESS_THAN_OR_EQUAL to DRIVER_BUILD_ID_LESS_THAN_OR_EQUAL r=ethlin r=milan → part2: Change DRIVER_LESS_THAN_OR_EQUAL to DRIVER_BUILD_ID_LESS_THAN_OR_EQUAL r=ethlin r=milan
Keywords: checkin-needed
Pushed by cbook@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/de297d5d37b0 Implement DRIVER_BUILD_ID_LESS_THAN_OR_EQUAL. r=milan https://hg.mozilla.org/integration/mozilla-inbound/rev/5d11d2b3af0b Change DRIVER_LESS_THAN_OR_EQUAL to DRIVER_BUILD_ID_LESS_THAN_OR_EQUAL r=ethlin r=milan
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: