Bug 1295899 - Implement DRIVER_BUILD_ID_LESS_THAN_OR_EQUAL. r=milan