widget/GfxInfoBase.cpp
@@ -375,8 +375,12 @@ BlacklistComparatorToComparisonOp(const nsAString& op)
 {
   if (op.EqualsLiteral("LESS_THAN"))
     return DRIVER_LESS_THAN;
+  else if (op.EqualsLiteral("BUILD_ID_LESS_THAN"))
+    return DRIVER_BUILD_ID_LESS_THAN;
   else if (op.EqualsLiteral("LESS_THAN_OR_EQUAL"))
     return DRIVER_LESS_THAN_OR_EQUAL;
+  else if (op.EqualsLiteral("BUILD_ID_LESS_THAN_OR_EQUAL"))
+    return DRIVER_BUILD_ID_LESS_THAN_OR_EQUAL;
   else if (op.EqualsLiteral("GREATER_THAN"))
     return DRIVER_GREATER_THAN;
   else if (op.EqualsLiteral("GREATER_THAN_OR_EQUAL"))
@@ -739,6 +743,9 @@ GfxInfoBase::FindBlocklistedDeviceInList(const nsTArray<GfxDriverInfo>& info,
       break;
     case DRIVER_LESS_THAN_OR_EQUAL:
       match = driverVersion <= info[i].mDriverVersion;
+      break;
+    case DRIVER_BUILD_ID_LESS_THAN_OR_EQUAL:
+      match = (driverVersion & 0xFFFF) <= info[i].mDriverVersion;
       break;
     case DRIVER_GREATER_THAN:
       match = driverVersion > info[i].mDriverVersion;
